# adhoc-queries-pointclouds

./: Cargo.toml  README.md  architecture.drawio  improvements.md  todo.md
io/: Cargo.toml
io/src/: las_common.rs  last.rs  last_reader.rs  lazer.rs  lazer_reader.rs  lib.rs
prog_index_server/: Cargo.toml
prog_index_server/src/: main.rs
query/: Cargo.toml
query/examples/: correctness_tests.rs  interactive_viewer.rs
query/src/: collect_points.rs  dump_points.rs  grid_sampling.rs  las.rs  lib.rs  main.rs  stats.rs
query/src/index/: block_index.rs  mod.rs  progressive_index.rs  query.rs  refinement.rs
query/src/io/: input_layer.rs  las.rs  last.rs  laz.rs  lazer.rs  mod.rs  output_layer.rs  reader.rs  stats.rs
query/src/search/: compiled_query.rs  las.rs  last.rs  laz.rs  lazer.rs  mod.rs
query/src/util/: math.rs  mod.rs
query/tests/: input_layer_tests.rs  query_baseline_tests.rs  refinement_tests.rs
query/tests/common/: mod.rs
readers/: Cargo.toml
readers/src/: last_reader.rs  lazer_reader.rs  lib.rs
scripts/: run_ad_hoc_queries.sh  run_ad_hoc_queries_doc.sh  run_adaptive_indexing.sh  run_optimized_reader_performance_ex.sh  run_postgis_queries_wip.sh  run_reader_performance_ex.sh
src/: collect_points.rs  dump_points.rs  grid_sampling.rs  las.rs  main.rs  math.rs
src/points/: last_reader.rs  lazer_reader.rs  mod.rs
src/search/: las.rs  laser.rs  last.rs  laz.rs  lazer.rs  mod.rs  searcher.rs
