[package]
name = "io_tests"
version = "0.1.0"
authors = ["pbormann"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
rayon = "1.4.0"
clap = "2.33.3"
serde = { version = "1.0.116", features = ["derive"] }
nalgebra = "0.22.0"
bincode = "1.3.1"