[package]
name = "io"
version = "0.1.0"
authors = ["pbormann"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
rayon = "1.4.0"
clap = "2.33.3"
serde = { version = "1.0.116", features = ["derive"] }
bincode = "1.3.1"
anyhow = "1.0.33"
byteorder = "1.3.4"
lz4 = "1.23.2"
bytemuck = { version = "1.5.1", features = ["derive"] }
pasture-core = { git = "https://github.com/Mortano/pasture.git", branch = "parse-extra-bytes" }
pasture-io = { git = "https://github.com/Mortano/pasture.git", branch = "parse-extra-bytes" }
pasture-derive = { git = "https://github.com/Mortano/pasture.git", branch = "parse-extra-bytes" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
tracy-client = { version = "0.15.2", default-features = false, features = ["enable", "system-tracing"] }