[package]
name = "query"
version = "0.1.0"
authors = ["pbormann"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
rayon = "1.4.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
bincode = "1.3.1"
byteorder = "1.3.4"
lz4 = "1.23.2"
pasture-core = { git = "https://github.com/Mortano/pasture.git", branch = "parse-extra-bytes" }
pasture-io = { git = "https://github.com/Mortano/pasture.git", branch = "parse-extra-bytes" }
pasture-derive = { git = "https://github.com/Mortano/pasture.git", branch = "parse-extra-bytes" }
laz = "0.8"
io = {path = "../io"}
num_cpus = "1.13.0"
rustc-hash = "1.1.0"
itertools = "0.10.5"
walkdir = "2.3.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
divide_range = "0.1.1"
human-repr = "1"
scopeguard = "1.1.0"
typetag = "0.2"
rand = "0.8.5"
exar = { git = "https://github.com/Mortano/experiment-archiver-rs", branch = "rewrite" }
bytemuck = {version = "1.13", features = ["derive"] }
ouroboros = "0.17.2"
geo = "0.26.0"
shapefile = { version = "0.5.0", features = ["geo-types"] }
tracy-client = { version = "0.15.2", default-features = false, features = [] }
page_size = "0.6.0"
memmap2 = "0.8.0"
statrs = "0.16.0"
tabled = "0.14"
tokio = { version = "1", features = ["full"] }
postgres = {version = "0.19" }

[dev-dependencies]
regex = "1"
colored = "2.0.4"

[profile.release]
debug = true
