[package]
name = "readers"
version = "0.1.0"
authors = ["pbormann"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
rayon = "1.4.0"
clap = "2.33.3"
serde = { version = "1.0.116", features = ["derive"] }
bincode = "1.3.1"
anyhow = "1.0.33"
byteorder = "1.3.4"
lz4 = "1.23.2"
pasture-core = "0.3.0"
pasture-io = "0.3.0"
pasture-derive = "0.2.0"